--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -15,11 +15,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/auth": "^21.13.0",
+    "@react-native-firebase/firestore": "^21.13.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.43",
+    "expo-auth-session": "~6.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-random": "^14.0.1",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -39,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
