--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -33,9 +33,12 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
+    "leaflet": "^1.9.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.76.9",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -45,8 +48,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-maps": "^0.24.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
