--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
@@ -22,6 +23,7 @@
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.43",
     "expo-auth-session": "~6.0.3",
+    "expo-blur": "~14.0.3",
     "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "^14.0.2",
@@ -44,8 +46,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "tailwind-rn": "^4.2.0",
-    "expo-blur": "~14.0.3"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
