--- a/myServiceApp/app.json
+++ b/myServiceApp/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "myServiceApp",
     "slug": "myServiceApp",
+    "owner": "oringe", 
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -14,14 +15,16 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.taskconnect.myserviceapp"
     },
     "android": {
       "package": "com.taskconnect.myserviceapp",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
