--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -15,15 +15,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@types/react-dom": "^18.2.19",
     "expo": "~52.0.43",
     "expo-auth-session": "~6.0.3",
+    "expo-blur": "~14.0.3",
     "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
+    "expo-google-app-auth": "^10.0.0",
+    "expo-google-sign-in": "^10.2.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-random": "^14.0.1",
@@ -33,20 +38,19 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "tailwind-rn": "^4.2.0",
-    "expo-blur": "~14.0.3"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "^18.3.20",
     "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
