--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -15,15 +15,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.10",
     "@types/react-dom": "^18.2.19",
-    "expo": "~52.0.43",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-crypto": "~14.0.2",
@@ -58,6 +58,7 @@
     "@types/react": "^18.3.20",
     "@types/react-native": "^0.72.8",
     "@types/react-native-maps": "^0.24.1",
+    "expo": "^52.0.44",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
