--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
@@ -27,6 +27,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.19",
     "expo-font": "~13.0.4",
     "expo-google-app-auth": "^10.0.0",
     "expo-google-sign-in": "^10.2.0",
@@ -41,6 +42,7 @@
     "firebase": "^11.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-native": "0.76.9",
@@ -51,7 +53,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "tailwind-rn": "^4.2.0",
-    "expo-dev-client": "~5.0.19"
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
