--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "expo-application": "^6.0.2",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-crypto": "~14.0.2",
@@ -33,6 +34,7 @@
     "expo-font": "~13.0.4",
     "expo-google-app-auth": "^10.0.0",
     "expo-google-sign-in": "^10.2.0",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-random": "^14.0.1",
@@ -55,8 +57,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "tailwind-rn": "^4.2.0",
-    "expo-image-picker": "~16.0.6"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
