--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -37,6 +37,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.10",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
