--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "expo-application": "^6.0.2",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -48,6 +49,7 @@
     "expo-web-browser": "~14.0.2",
     "express": "^5.1.0",
     "firebase": "^11.6.1",
+    "hi-base32": "^0.5.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
@@ -61,10 +63,12 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "thirty-two": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/leaflet": "^1.9.17",
     "@types/react": "^18.3.20",
     "@types/react-native": "^0.72.8",
