--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
@@ -32,6 +33,7 @@
     "expo-blur": "~14.0.3",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.19",
+    "expo-device": "^7.0.3",
     "expo-font": "~13.0.4",
     "expo-google-app-auth": "^10.0.0",
     "expo-google-sign-in": "^10.2.0",
@@ -40,6 +42,7 @@
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
     "expo-location": "^18.0.10",
+    "expo-network": "^7.0.5",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.20",
     "expo-secure-store": "^14.0.1",
@@ -57,6 +60,7 @@
     "react-leaflet": "^4.2.1",
     "react-native": "0.76.9",
     "react-native-date-picker": "^5.0.12",
+    "react-native-device-info": "^14.0.4",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
