Email and Phone Number during tasker onboarding is prefilled and unedittable to precent Fraud

--- a/myServiceApp/app.json
+++ b/myServiceApp/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "myServiceApp",
     "slug": "myServiceApp",
+    "owner": "oringe", 
     "version": "1.0.0",
     "scheme": "myserviceapp",
     "newArchEnabled": true,
