--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
@@ -35,7 +35,7 @@
     "expo-dev-client": "~5.0.19",
     "expo-device": "^7.0.3",
     "expo-font": "~13.0.4",
-    "expo-google-app-auth": "^10.0.0",
+    "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "^10.2.0",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
@@ -44,9 +44,9 @@
     "expo-location": "^18.0.10",
     "expo-network": "^7.0.5",
     "expo-random": "^14.0.1",
-    "expo-router": "~4.0.20",
+    "expo-router": "~4.0.21",
     "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
@@ -75,9 +75,8 @@
     "@types/crypto-js": "^4.2.2",
     "@types/leaflet": "^1.9.17",
     "@types/react": "^18.3.20",
-    "@types/react-native": "^0.72.8",
     "@types/react-native-maps": "^0.24.1",
-    "expo": "^52.0.44",
+    "expo": "~52.0.46",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
