--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -54,6 +54,7 @@
     "firebase": "^11.6.1",
     "hi-base32": "^0.5.1",
     "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
@@ -74,6 +75,7 @@
     "@babel/core": "^7.25.2",
     "@types/crypto-js": "^4.2.2",
     "@types/leaflet": "^1.9.17",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.20",
     "@types/react-native-maps": "^0.24.1",
     "expo": "~52.0.46",
