added verification documents UI

--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -69,7 +69,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "tailwind-rn": "^4.2.0",
-    "thirty-two": "^1.0.2"
+    "thirty-two": "^1.0.2",
+    "expo-document-picker": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
