Expo Upgrade to save Tobiko

--- a/myServiceApp/app.json
+++ b/myServiceApp/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "myServiceApp",
     "slug": "myServiceApp",
-    "owner": "oringe", 
+    "owner": "oringe",
     "version": "1.0.0",
     "scheme": "myserviceapp",
     "newArchEnabled": true,
@@ -16,9 +16,10 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow Task Connect to use your location to suggest addresses."
         }
-      ]
+      ],
+      "expo-font",
+      "expo-web-browser"
     ],
-
     "android": {
       "package": "com.taskconnect.myserviceapp",
       "intentFilters": [
@@ -30,16 +31,17 @@
               "scheme": "myserviceapp"
             }
           ],
-          "category": ["BROWSABLE", "DEFAULT"]
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         }
       ]
     },
     "ios": {
-      
       "infoPlist": {
         "NSFaceIDUsageDescription": "This app uses Face ID to securely log you in."
-      }, 
-
+      },
       "bundleIdentifier": "com.taskconnect.myserviceapp"
     },
     "extra": {
