--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -14,74 +14,54 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-firebase/app": "^21.13.0",
-    "@react-native-firebase/auth": "^21.13.0",
-    "@react-native-firebase/firestore": "^21.13.0",
-    "@react-native-google-signin/google-signin": "^13.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.2.10",
-    "@types/react-dom": "^18.2.19",
-    "axios": "^1.8.4",
-    "cors": "^2.8.5",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
     "crypto-js": "^4.2.0",
-    "expo-application": "^6.0.2",
-    "expo-auth-session": "~6.0.3",
-    "expo-blur": "~14.0.3",
-    "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.19",
-    "expo-device": "^7.0.3",
-    "expo-font": "~13.0.4",
+    "date-fns": "^4.1.0",
+    "expo": "~53.0.0",
+    "expo-application": "~6.1.4",
+    "expo-auth-session": "~6.2.0",
+    "expo-blur": "~14.1.5",
+    "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.0",
+    "expo-device": "^7.1.4",
+    "expo-font": "~13.3.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "^10.2.0",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-local-authentication": "~15.0.2",
-    "expo-location": "^18.0.10",
-    "expo-network": "^7.0.5",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.5",
+    "expo-local-authentication": "^16.0.4",
+    "expo-location": "~18.1.5",
+    "expo-network": "^7.1.5",
     "expo-random": "^14.0.1",
-    "expo-router": "~4.0.21",
-    "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "express": "^5.1.0",
-    "firebase": "^11.6.1",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.1.6",
+    "firebase": "^11.9.0",
     "hi-base32": "^0.5.1",
-    "leaflet": "^1.9.4",
-    "lodash.debounce": "^4.0.8",
-    "react": "^18.3.1",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1",
-    "react-native": "0.76.9",
-    "react-native-date-picker": "^5.0.12",
-    "react-native-device-info": "^14.0.4",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "tailwind-rn": "^4.2.0",
-    "thirty-two": "^1.0.2"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "undefined": "\\"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/crypto-js": "^4.2.2",
-    "@types/leaflet": "^1.9.17",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "^18.3.20",
-    "@types/react-native-maps": "^0.24.1",
-    "expo": "~52.0.46",
-    "jest": "^29.2.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.3.3"
   },
   "private": true
