Full upgrade to SDK 53

--- a/package.json
+++ b/package.json
@@ -1,10 +1,68 @@
 {
+  "name": "myserviceapp",
+  "main": "expo-router/entry",
+  "license": "0BSD",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
-    "expo": "^52.0.44",
-    "expo-image-picker": "^16.0.6"
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
+    "expo": "~53.0.0",
+    "expo-application": "~6.1.4",
+    "expo-auth-session": "~6.2.0",
+    "expo-blur": "~14.1.5",
+    "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.0",
+    "expo-device": "^7.1.4",
+    "expo-font": "~13.3.1",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-google-sign-in": "^10.2.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.5",
+    "expo-local-authentication": "^16.0.4",
+    "expo-location": "~18.1.5",
+    "expo-network": "^7.1.5",
+    "expo-random": "^14.0.1",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.1.6",
+    "firebase": "^11.9.0",
+    "hi-base32": "^0.5.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "undefined": "\\"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
-  }
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "jest-expo": "~52.0.6",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
