--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
+    "@react-navigation/stack": "^7.3.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.0",
@@ -29,6 +30,7 @@
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.0",
     "expo-device": "^7.1.4",
+    "expo-document-picker": "~13.0.3",
     "expo-font": "~13.3.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "^10.2.0",
@@ -55,8 +57,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
-    "undefined": "\\",
-    "expo-document-picker": "~13.0.3"
+    "undefined": "\\"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
