--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
+    "@react-navigation/native": "^7.1.12",
     "@react-navigation/stack": "^7.3.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
