--- a/myServiceApp/functions/tsconfig.json
+++ b/myServiceApp/functions/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "NodeNext",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "moduleResolution": "nodenext",
     "noImplicitReturns": true,
