--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-node_modules
+node_modules/
+.env
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+coverage/
+.runtimeconfig.json
+.DS_Store
