--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
     "@react-navigation/stack": "^7.3.3",
+    "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.0",
