--- a/myServiceApp/functions/package.json
+++ b/myServiceApp/functions/package.json
@@ -26,5 +26,10 @@
     "eslint-plugin-import": "^2.31.0",
     "firebase-functions-test": "^3.1.0"
   },
-  "private": true
+  "private": true,
+  "version": "1.0.0",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
