--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "hi-base32": "^0.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-native": "0.79.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
