--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
+    "recharts": "^2.15.4",
     "undefined": "\\"
   },
   "devDependencies": {
