--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^7.1.12",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.0",
@@ -48,6 +49,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
+    "express": "^5.1.0",
     "firebase": "^11.9.0",
     "hi-base32": "^0.5.1",
     "react": "19.0.0",
