--- a/myServiceApp/functions/package.json
+++ b/myServiceApp/functions/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2"
   },
