--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -43,6 +43,7 @@
     "expo-local-authentication": "^16.0.4",
     "expo-location": "~18.1.5",
     "expo-network": "^7.1.5",
+    "expo-notifications": "^0.31.3",
     "expo-random": "^14.0.1",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.9",
