--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.12",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.10.0",
@@ -56,6 +57,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
