--- a/myServiceApp/package.json
+++ b/myServiceApp/package.json
@@ -64,7 +64,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
-    "undefined": "\\"
+    "undefined": "\\",
+    "expo-file-system": "~18.1.10",
+    "expo-sharing": "~13.1.5"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
