--- a/admin/package.json
+++ b/admin/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.4.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "recharts": "^2.15.4"
   },
   "devDependencies": {
